# drl_swarm

./: .gitignore  .gitmodules  .readthedocs.yaml  Heterogeneous Swarm Motion Planning.pptx  README.md  USING_REPO_README.md  explore_launch.sh  frames.gv  frames_2024-02-16_15.11.58.gv  hardware_simple_mapper_keyboard.sh  launch_json_vscode.json  nav_launch.bash  output_txt.txt  publish_explore.sh  q  requirements.txt  swarm_launch.bash  tb_launch.bash  test.bash  webots_simple_mapper_keyboard.sh  webots_spawner_launch.bash  webots_world_launch.bash  zsh_webots_spawner_launch.zsh  zsh_webots_world_launch.zsh
src/cf_webots_bringup/: CMakeLists.txt  package.xml
src/cf_webots_bringup/launch/: cf_webots_bringup.launch.py
src/webots_pkg/: package.xml  rosdoc2.yaml  setup.cfg  setup.py
src/webots_pkg/config/: config_readers.py  experiment_config.yaml  webots_config.yaml  webots_config_no_cf.yaml
src/webots_pkg/cross_reference/webots_pkg/: objects.inv
src/webots_pkg/docs/: cf_launch.rst  conf.py  swarm_launch.rst  tb_launch.rst  webots_pkg.rst
src/webots_pkg/docs_output/webots_pkg/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  search.html  searchindex.js  webots_pkg.crazyflie_controller.html  webots_pkg.crazyflie_publisher.html  webots_pkg.crazyflie_webots_driver.html  webots_pkg.html  webots_pkg.lighthouse_classes.html  webots_pkg.lighthouse_functions.html  webots_pkg.lighthouse_node.html  (+7 more)
src/webots_pkg/hardware_sim_config/: apartment.wbt  test.wbt  webots_configure_swarm.py  write_lh_config.py  write_swarm_to_world.py
src/webots_pkg/launch/: cf_flight_launch.py  cf_launch.py  cf_lighthouse_vicon_test_launch.py  cf_localization_launch.py  cf_publisher_launch.py  cf_test_localization_launch.py  nav2_launch.py  robot_launch.py  swarm_launch.py  tb_launch.py  transforms_launch.py  webots_nav2_launch.py  webots_nav2_no_cf_launch.py  webots_spawner_launch.py  webots_spawner_launch_new.py  webots_world_launch.py  webots_world_with_swarm_launch.py
src/webots_pkg/pre_launch/: calibrate_lh_config.py  webots_configure_swarm.py  write_lh_config.py
src/webots_pkg/resource/: Crazyflie1.urdf  Crazyflie2.urdf  crazyflie.urdf  crazyflie_proto_url.txt  crazyflie_publisher.py  crazyflie_webots_driver.py  graph_search.py  swarm_classes.py  turtlebot.urdf
src/webots_pkg/test/: example_test_tb.py  plan for testing.md  test_cf.json  test_cf_connection.py  test_cf_connection_example.py  test_pre_launch_cf_lighthouse_configuration.py  test_pre_launch_deploy_swarm.py  test_pytest_hello_world.py  test_swarm.json  test_webots_world_launch.py  test_webots_world_setup.py  webots_world_launch.py  webots_world_launch_pytest.py
src/webots_pkg/webots_pkg/: config_readers.py  crazyflie_controller.py  crazyflie_publisher.py  crazyflie_webots_driver.py  lighthouse_classes.py  lighthouse_functions.py  lighthouse_node.py  my_turtlebot_driver.py  potential_field_node.py  simple_mapper.py  spawning_functions.py  swarm_classes.py  swarm_launch_functions.py  turtlebot_mapper_node.py  turtlebot_webots_driver.py
src/webots_pkg/worlds/: .hall.wbproj  .swarm_apartment.wbproj  .swarm_crazyflie_apartment.wbproj  .turtlebot_apartment.wbproj  apartment.wbt  apartment_importable_proto.wbt  hall.wbt  pre_launch_deploy_swarm.py  swarm_apartment.wbt  swarm_crazyflie_apartment.wbt  test_env.wbt  turtlebot_apartment.wbt
(+365 files in other folders)
