<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="willgraham345@gmail.com">will</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclpy</depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>webots_ros2_driver</depend>
  <exec_depend>webots_ros2_control</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <depend>launch</depend>
  <depend>robot_state_p ublisher</depend>
  
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>rviz2</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
